Added product module

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ RATE_LIMIT=100
 MONGO_URL=mongodb://localhost/intuit
 HISTORY_MONGO_URL=mongodb://localhost/intuit-history
 JWT_SECRET=abcde12345
+API_KEY=sampleapikey
