--- a/.env
+++ b/.env
@@ -6,3 +6,5 @@ MONGO_URL=mongodb://localhost/intuit
 HISTORY_MONGO_URL=mongodb://localhost/intuit-history
 JWT_SECRET=abcde12345
 API_KEY=sampleapikey
+REDIS_HOST=localhost
+REDIS_PORT=6379
