--- a/package.json
+++ b/package.json
@@ -30,13 +30,16 @@
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/passport": "^7.1.5",
     "@nestjs/platform-express": "^7.5.1",
+    "@nestjs/terminus": "^7.1.0",
     "async": "^3.2.0",
     "bcrypt": "^5.0.1",
     "bull": "^3.20.1",
+    "cache-manager": "^3.4.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "dotenv": "^8.2.0",
     "express-rate-limit": "^5.2.6",
+    "helmet": "^4.4.1",
     "mongoose": "^5.11.19",
     "mongoose-autopopulate": "^0.12.3",
     "mongoose-history": "^0.8.0",
@@ -52,6 +55,7 @@
     "@nestjs/schematics": "^7.1.3",
     "@nestjs/testing": "^7.5.1",
     "@types/bull": "^3.15.0",
+    "@types/cache-manager": "^3.4.0",
     "@types/express": "^4.17.8",
     "@types/jest": "^26.0.15",
     "@types/node": "^14.14.6",
